dapr/pi-deploy/query-store.yaml
kind: Service
apiVersion: v1
metadata:
  name: "dapr-query-store"
  labels:
    app: "query-store"
spec:
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "dapr-query-store"
  labels:
    app: "query-store"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "query-store"
  template:
    metadata:
      labels:
        app: "query-store"
      annotations:
        dapr.io/config: "tracing"
        dapr.io/enabled: "true"
        dapr.io/app-id: "query-store"
        dapr.io/app-port: "3000"
    spec:
      containers:
      - name: "query-store"
        image: baio/vow-docs-query-store-arm:latest
        ports:
        - containerPort: 3000
