dapr/pi-deploy/read-file.yaml
kind: Service
apiVersion: v1
metadata:
  name: "dapr-read-file"
  labels:
    app: "read-file"
spec:
  selector:
    app: "read-file"
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "dapr-read-file"
  labels:
    app: "read-file"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "read-file"
  template:
    metadata:
      labels:
        app: "read-file"
      annotations:
        dapr.io/config: "tracing"
        dapr.io/enabled: "true"
        dapr.io/app-id: "read-file"
        dapr.io/app-port: "3000"
    spec:
      containers:
      - name: "read-file"
        image: baio/vow-docs-read-file-arm:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: "Always"
